# one-ring-index

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: daily-sweep.yml
config/: negative_terms.yml  source_queries.yml  tolkien_terms.yml
data/: candidates.jsonl  catalog.jsonl  rejects.jsonl
docs/: candidates.md  catalog.csv  catalog.json  index.md
docs/superpowers/plans/: 2026-06-17-one-ring-index.md
src/lotr_index/: cli.py  dedupe.py  http.py  model.py  normalize.py  render.py  score.py  storage.py
src/lotr_index.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lotr_index/collectors/: arxiv.py  crossref.py  github.py  huggingface.py  npm.py  openalex.py  pypi.py  semantic_scholar.py  zenodo.py
tests/: test_dedupe.py  test_normalize.py  test_render.py  test_score.py
