[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotr-index"
version = "0.1.0"
description = "Daily index of Tolkien-inspired acronyms, models, benchmarks, datasets, and software tools."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "LOTR Index Maintainers" }]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "feedparser>=6.0",
  "rich>=13.7",
  "huggingface_hub>=0.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.scripts]
lotr-index = "lotr_index.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
